# chip-8-emulator

./: .gitignore  CMakeLists.txt  README.md  build.sh  mem
screenshots/: 2025-05-11 13-00-38.mov  2025-05-11 16-58-10.mov  2025-05-11 16-59-45.mov  2025-05-13 00-08-15.mov
src/: audio.hpp  chip8.hpp  chip8_examples.hpp  chip8_tests.hpp  chip8_writer.hpp  constants.hpp  engine.hpp  gl.hpp  global.hpp  input.hpp  log.hpp  main.cpp  render.hpp  types.hpp  utils.hpp
src/chip8/: chip8.hpp  chip8_examples.hpp  chip8_tests.hpp  chip8_types.hpp  chip8_writer.hpp
util/: generate_beep.py
